# primus-turbo-auto-optimizer

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_tests.py
.claude-plugin/: plugin.json
config/: optimizer.yaml
docs/: design-spec-zh.md  design-spec.md  implementation-plan-zh.md  implementation-plan.md  kernel-optimize-cli-design.md  turbo_optimize_design.md  turbo_view_design.md
hooks/: post-round.sh  pre-benchmark.sh
scripts/: sync_primus_turbo.sh
skills/optimize-knowledge/: SKILL.md
skills/optimize-review/: SKILL.md
templates/: final-summary.md  pr-description.md  round-report.md
tests/: test_activity_logger.py  test_benchmark_runner.py  test_bottleneck_detector.py  test_claude_connector.py  test_cleanup_stray.py  test_cli_overrides.py  test_config_loader.py  test_dashboard.py  test_debug_retry.py  test_full_validation_gate.py  test_gap_improvements.py  test_gpu_pool.py  test_integration.py  test_measurement_consistency.py  test_optimize_md_sections.py  test_profiler.py  test_report_tips.py  test_resume_rewind.py  test_review_integration.py  test_rollback.py  test_run_phase_logging.py  test_smoke_orchestrator.py  test_state_namespacing.py  test_state_store.py  test_warm_restart.py
tools/: activity_logger.py  benchmark_runner.py  bottleneck_detector.py  config_loader.py  dashboard.py  gpu_pool.py  profiler.py  state_store.py
turbo_optimize/: __init__.py  __main__.py  cli.py  config.py  errors.py  logs.py  manifest.py  scoring.py  signals.py  skills.py  state.py
turbo_view/: __init__.py  __main__.py  cli.py  discover.py  model.py
(+126 files in other folders)
